--- a/index.html
+++ b/index.html
@@ -36,12 +36,13 @@
                 and bravery, and we are dedicated to achieving our goals. Aarya Coin is inspired by the vision of
                 providing users with a trustworthy and reliable investment option. Join us on this exciting journey as
                 we strive to revolutionize the cryptocurrency landscape with Aarya Coin!</div>
-            <button id="whitepaper">
+            <a href="documents/whitepaper.pdf" class="learn-more"><button id="whitepaper">
                 <span></span>
                 <span></span>
                 <span></span>
                 <span></span> whitepaper
             </button>
+        </a>
         </div>
     </div>
     <div class=callToAction data-aos=flip-right>
