--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
         </div>
     </div>
     <div class="introText">
-        <h2>Elevate your investment game with Aarya Coin.</h2>A coin with well managed tokenomics to provide
-        transparency for investors and security for users.
+        <h2>Elevate your investment game with Aarya Coin.</h2>
+        <p>A coin with well managed tokenomics to provide
+            transparency for investors and security for users.</p> 
     </div>
     <div class="infoContainer">
         <div class="logo"><img src="images/logo.jpg" alt=""></div>
