--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <!-- <h2>Future of Finance.</h2> -->
         </div>
     </div>
-    <div class="introText">
+    <div class="introText lozad" data-background-image="images/intro-bg.svg">
         <h2>Elevate your investment game with Aarya Coin.</h2>
         <p>A coin with well managed tokenomics to provide
             transparency for investors and security for users.</p> 
@@ -1601,7 +1601,7 @@
             <p>Invest with confidence and unlock the potential of cryptocurrency trading Invest in Aarya Coin today and
                 experience transparency, security, and efficiency.</p><br>
                 <div class="tooltip"> Token Address:
-                    <span ondblclick="copyToClipboard()" style="text-decoration:underline;cursor: pointer;">0xAbCdEfGhIjKlMnOpQrStUvWxYz</span>
+                    <span onclick="copyToClipboard()" style="text-decoration:underline;cursor: pointer;">0xAbCdEfGhIjKlMnOpQrStUvWxYz</span>
                     <div class="tooltiptext">Copied to clipboard!</div>
                   </div>
                 
