--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,7 +8,10 @@
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
     <title>Aarya</title>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/lozad/dist/lozad.min.js"></script>
+    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
 </head>
@@ -25,7 +27,7 @@
             <!-- <h2>Future of Finance.</h2> -->
         </div>
     </div>
-    <div class="introText lozad" data-background-image="images/intro-bg.svg">
+    <div class="introText lozad">
         <h2>Elevate your investment game with Aarya Coin.</h2>
         <p>A coin with well managed tokenomics to provide
             transparency for investors and security for users.</p> 
@@ -51,7 +53,6 @@
     </div>
     <div class=callToAction data-aos=flip-right>
         <div class=growthImg>
-            <!-- <img class=lozad data-src=../images/cta-img.svg alt="cta-img.svg"> -->
             <svg id="freepik_stories-crypto-portfolio" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 500 500"
                 version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:svgjs="http://svgjs.com/svgjs">
                 <g id="freepik--background-complete--inject-18" class="animable"
@@ -1618,9 +1619,10 @@
     </div>
 
     <footer>&copy;&nbsp; Aarya &nbsp;<span id="copyright-year"></span></footer>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/lozad/dist/lozad.min.js"></script>
     <script>
-        const observer = lozad(); // lazy loads elements with default selector as '.lozad'
-        observer.observe();
+const observer = lozad(); // lazy loads elements with default selector as '.lozad'
+observer.observe();
     </script>
     <script>
         const target = document.getElementById("freepik_stories-crypto-portfolio");
