--- a/index.html
+++ b/index.html
@@ -39,10 +39,9 @@
             <div class="infoTextHeading">What is Aarya Coin ?</div>
             <div class="infoText">Aarya Coin is a cutting-edge ERC20 token that is committed to providing users with a
                 secure and transparent trading experience. Our mission is to create a platform that brings transparency
-                and security to the world of cryptocurrencies. Our core team values hard work, compassion, generosity,
-                and bravery, and we are dedicated to achieving our goals. Aarya Coin is inspired by the vision of
+                and security to the world of cryptocurrencies. Our core team values hard work, integrity, commitment, and innovation.We are dedicated to achieve our goals. Aarya Coin is inspired by the vision of
                 providing users with a trustworthy and reliable investment option. Join us on this exciting journey as
-                we strive to revolutionize the cryptocurrency landscape with Aarya Coin!</div>
+                we strive to revolutionize the crypto landscape with Aarya Coin!</div>
             <a href="documents/whitepaper.pdf" class="learn-more"><button id="whitepaper">
                     <span></span>
                     <span></span>
