--- a/index.html
+++ b/index.html
@@ -1636,15 +1636,22 @@
                     style="text-decoration:underline;cursor: pointer;">0xAbCdEfGhIjKlMnOpQrStUvWxYz</span>
                 <div class="tooltiptext">Copied to clipboard!</div>
             </div>
-
-
-            <a class=learn-more href="https://app.uniswap.org/#/swap">
+           <div class="ctaButtons" style="display:flex;align-items:center;justify-content:space-around;@media(max-width:800px){.ctaButtons{flex-wrap:wrap;}}">
+<a class=learn-more href="https://app.uniswap.org/#/swap">
                 <div class="buttonsCta">
                     <button class="btnCta "><span></span>
                         <p data-start="Get Ready..." data-text="Empower" data-title="Invest!"></p>
                     </button>
                 </div>
             </a>
+<a class=learn-more href="">
+                <div class="buttonsCta">
+                    <button class="btnCta "><span></span>
+                        <p data-start="Get Ready..." data-text="Analyse" data-title="View Graph"></p>
+                    </button>
+                </div>
+            </a>
+           </div>
             <br><br>
         </div>
     </div>
