--- a/index.html
+++ b/index.html
@@ -1636,7 +1636,7 @@
                     style="text-decoration:underline;cursor: pointer;">0xAbCdEfGhIjKlMnOpQrStUvWxYz</span>
                 <div class="tooltiptext">Copied to clipboard!</div>
             </div>
-           <div class="ctaButtons" style="display:flex;align-items:center;justify-content:space-around;@media(max-width:800px){.ctaButtons{flex-wrap:wrap;}}">
+           <div class="ctaBtns" style="display:flex;align-items:center;justify-content:space-around;">
 <a class=learn-more href="https://app.uniswap.org/#/swap">
                 <div class="buttonsCta">
                     <button class="btnCta "><span></span>
@@ -1652,6 +1652,13 @@
                 </div>
             </a>
            </div>
+<style>
+@media(max-width:800px){
+.ctaBtns{
+   flex-wrap:wrap;
+ }
+}
+</style>
             <br><br>
         </div>
     </div>
