--- a/index.html
+++ b/index.html
@@ -1644,7 +1644,7 @@
                     </button>
                 </div>
             </a>
-<a class=learn-more href="">
+<a class=learn-more href="https://www.dexview.com/polygon/0xfeD72C2AB844Fe7475E5DE14677818605E642c2f">
                 <div class="buttonsCta">
                     <button class="btnCta "><span></span>
                         <p data-start="Get Ready..." data-text="Analyse" data-title="View Graph"></p>
