--- a/index.html
+++ b/index.html
@@ -62,19 +62,19 @@
         </div>
     </div>
     <div class="introText lozad" id="about">
-        <h2>Elevate your investment game with Aarya Coin.</h2>
-        <p>A coin with well managed tokenomics to provide
+        <h2>Elevate your investment game with Aarya.</h2>
+        <p>A token with well managed tokenomics to provide
             transparency for investors and security for users.</p>
     </div>
     <div class="infoContainer" id="tokenomics">
         <div class="logo"><img src="images/logo.png" alt=""></div>
         <div class="infoTextWrapper">
-            <div class="infoTextHeading">What is Aarya Coin ?</div>
-            <div class="infoText">Aarya Coin is a cutting-edge ERC20 token that is committed to providing users with a
+            <div class="infoTextHeading">What is Aarya ?</div>
+            <div class="infoText">Aarya(ARY) is a cutting-edge ERC20 token that is committed to providing users with a
                 secure and transparent trading experience. Our mission is to create a platform that brings transparency
-                and security to the world of cryptocurrencies. Our core team values hard work, integrity, commitment, and innovation.We are dedicated to achieve our goals. Aarya Coin is inspired by the vision of
+                and security to the world of cryptocurrencies. Our core team values hard work, integrity, commitment, and innovation.We are dedicated to achieve our goals. Aarya is inspired by the vision of
                 providing users with a trustworthy and reliable investment option. Join us on this exciting journey as
-                we strive to revolutionize the crypto landscape with Aarya Coin!</div>
+                we strive to revolutionize the crypto landscape with Aarya!</div>
             <a href="documents/whitepaper.pdf" class="learn-more"><button id="whitepaper">
                     <span></span>
                     <span></span>
@@ -121,7 +121,7 @@
         </div>
         <div class=ctaText>
             <h3>Ready to join the revolution?</h3>
-            <p>Invest with confidence and unlock the potential of cryptocurrency trading Invest in Aarya Coin today and
+            <p>Invest with confidence and unlock the potential of cryptocurrency trading Invest in Aarya today and
                 experience transparency, security, and efficiency.</p><br>
             <div class="tooltip"> Token Address:
                 <span onclick="copyToClipboard()"
