--- a/index.html
+++ b/index.html
@@ -1570,11 +1570,13 @@
             <h3>Ready to join the revolution?</h3>
             <p>Invest with confidence and unlock the potential of cryptocurrency trading Invest in Aarya today and
                 experience transparency, security, and efficiency.</p><br>
-            <div class="tooltip"> Token Address:
-                <span onclick="copyToClipboard()"
-                    style="text-decoration:underline;cursor: pointer;">0x0c3B13f9D5156d1195644852661bA61ae53A423C</span>
-                <div class="tooltiptext">Copied to clipboard!</div>
-            </div>
+                <p>Blockchain Explorer:</p>
+                <p><a href="https://polygonscan.com/token/0x0c3B13f9D5156d1195644852661bA61ae53A423C" style="word-break: break-word; color: #e3e3e3;">https://polygonscan.com/token/0x0c3B13f9D5156d1195644852661bA61ae53A423C</a></p>
+            <!-- <div class="tooltip"> Blockchain Explorer:0x0c3B13f9D5156d1195644852661bA61ae53A423C
+                 <span onclick="copyToClipboard()"
+                    style="text-decoration:underline;cursor: pointer; color: black;word-wrap: ;"> 0x0c3B13f9D5156d1195644852661bA61ae53A423C</span>
+                <div class="tooltiptext">Copied to clipboard!</div> 
+            </div> -->
 
 
             <a class=learn-more href="https://app.uniswap.org/#/swap">
