--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <source data-src="videos/modern-1.webm" type="video/webm">
             </video></div>
 
-<div class="coin"><img class="lozad" data-src="images/transparent1/1.png" alt=""></div>
+<div class="coin"><img class="lozad" data-src="images/transparent1/1.webp" alt=""></div>
     </div>
 
     <div class="introText lozad" id="about">
