--- a/index.html
+++ b/index.html
@@ -1623,7 +1623,7 @@
         <div class="partner">
         <h3>Associated Partner:</h3>
         <img class="partnerLogo" src="images/money-protocol.webp" alt="MONEY Protocol">
-        <h3>MONEY Protocol</h4>
+        <!-- <h3>MONEY Protocol</h4> -->
         </div>
         <div class="faqContainer">
 
@@ -1675,15 +1675,15 @@
             <div class="wrapper">
                     <div class="sub-wrapper" onclick="toPolygonscan()">
                     <img class ="partnerLogo" src="images/polygon.webp" alt="Polygon">
-                    <h3>Polygon</h3>
+                    <!-- <h3>Polygon</h3> -->
                     </div>
                     <div class="sub-wrapper">
                         <img class="partnerLogo" src="images/metamask.webp" alt="Metamask" onclick="addToWallet()">
-                    <h3>Metamask</h3>
+                    <!-- <h3>Metamask</h3> -->
                     </div>
                     <div class="sub-wrapper">
                         <img class="partnerLogo" src="images/solana.png" alt="Solana" onclick="toSolscan()">
-                    <h3>Solana</h3>
+                    <!-- <h3>Solana</h3> -->
                     </div>
                     
             </div>
