--- a/index.html
+++ b/index.html
@@ -1606,6 +1606,11 @@
                     <p data-start="Get Ready..." data-text="Invest" data-title="Add to Wallet"></p>
                 </button>
             </div>
+            <div class="buttonsCta">
+                <button class="btnCta" onclick="toICO()"><span></span>
+                    <p data-start="Get Ready..." data-text="Invest" data-title="Buy Aarya"></p>
+                </button>
+            </div>
 
             <!-- <a class=learn-more href="https://app.uniswap.org/#/swap">
                 <div class="buttonsCta">
@@ -1738,6 +1743,10 @@
 
 function toSolscan() {
   window.open('https://solscan.io/token/G2owsbvXJBRJHpjiZD3BHCsteBZXJwKWXcqwajWGvopi', '_blank');
+}
+
+function toICO() {
+  window.open('https://aarya-ico.netlify.app', '_blank');
 }
     </script>
      <!-- js to animate the svg on scroll -->
