--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             transparency for investors and security for users.</p>
         </section>
     <section class="infoContainer" id="tokenomics">
-        <div class="bg-video"><video autoplay loop muted plays-inline class="num-video lozad" data-poster="images/num-video-poster.webp">
+        <div class="info-bg-video"><video autoplay loop muted plays-inline class="num-video lozad" data-poster="images/num-video-poster.webp">
             <source data-src="videos/intro.webm" type="video/webm">
         </video></div>
         <div class="logo"><img src="images/logo.png" alt=""></div>
