--- a/index.html
+++ b/index.html
@@ -63,11 +63,10 @@
         <p>A token with well managed tokenomics to provide
             transparency for investors and security for users.</p>
         </section>
-    <section class="infoContainer" id="tokenomics">
-        <div class="info-bg-video"><video autoplay loop muted plays-inline class="num-video lozad" data-poster="images/num-video-poster.webp">
-            <source data-src="videos/intro.webm" type="video/webm">
-        </video></div>
-        <div class="logo"><img src="images/logo.png" alt=""></div>
+    <section id="tokenomics">
+        <!-- <div class="info-bg-video">
+         </div> -->
+        <!--<div class="logo"><img src="images/logo.png" alt=""></div>
         <div class="infoTextWrapper">
             <div class="infoTextHeading"><h1>What is Aarya ?</h1></div>
             <div class="infoText">Aarya(ARY) is a cutting-edge ERC20 token that is committed to providing users with a
@@ -83,7 +82,30 @@
                     <span></span> whitepaper
                 </button>
             </a>
-        </div>
+        </div> -->
+        <div class="container">
+            <div class="video-container">
+              <video autoplay loop muted class="num-video lozad" data-poster="images/num-video-poster.webp">
+                <source data-src="videos/intro.webm" type="video/webm">
+            </video>
+            </div>
+            <div class="content">
+              <div class="info-logo">
+                <img src="images/logo.png" alt="">
+              </div>
+              <div class="text-content">
+                <h2>What is Aarya?</h2>
+                <p>Aarya(ARY) is a cutting-edge ERC20 token that is committed to providing users with a secure and transparent trading experience. Our mission is to create a platform that brings transparency and security to the world of cryptocurrencies. Our core team values hard work, integrity, commitment, and innovation. We are dedicated to achieving our goals. Aarya is inspired by the vision of providing users with a trustworthy and reliable investment option. Join us on this exciting journey as we strive to revolutionize the crypto landscape with Aarya!</p>
+                <a href="documents/whitepaper.pdf" class="learn-more"><button id="whitepaper">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span> whitepaper
+                </button>
+            </a>
+              </div>
+            </div>
+          </div>
     </section>
     <section class="endElements">
     <section class="featuresWrapper">
