--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
+<meta name="keywords" content="Aarya network, Aarya(ARY), ARY, Aarya, ERC20, PLG20, Aarya network Polygon, Aarya Polygon, DeFi decentralized payment system, secure transactions, fast payments, low-cost payments, Saurashtra region, Gujarat, India, blockchain technology, cryptocurrency, financial solutions">
+
+<meta name="description" content="Aarya is a decentralized payment system designed to provide secure, fast, and low-cost transactions.  Experience the future of payments with Aarya.">
+    
     <title>Aarya</title>
     <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
@@ -28,7 +32,7 @@
 <body>
     <nav class="nav">
         <div class="nav-bg"></div>
-        <div class="logo"><a href="#">AARYA</a></div>
+        <div class="logo"><a href="#"><h1 id="mheading">AARYA</h1></a></div>
         <div class="links">
             
             <span><a href="#home">Home</a></span>
@@ -1776,7 +1780,7 @@ function toSolscan() {
 }
 
 function toICO() {
-  window.open('https://aarya-ico.netlify.app', '_blank');
+  window.open('https://aarya-ico.netlify.app', '_self');
 }
     </script>
 
