--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
-<meta name="keywords" content="Aarya network, Aarya(ARY), ARY, Aarya, ERC20, PLG20, Aarya network Polygon, Aarya Polygon, DeFi decentralized payment system, secure transactions, fast payments, low-cost payments, Saurashtra region, Gujarat, India, blockchain technology, cryptocurrency, financial solutions">
+<meta name="keywords" content="Aarya network, Aarya(ARY), ARY, Aarya, Project Aarya, Crypto, ERC20, PLG20, Aarya network Polygon, Aarya Polygon, DeFi decentralized payment system, secure transactions, fast payments, low-cost payments, Saurashtra region, Gujarat, India, blockchain technology, cryptocurrency, financial solutions">
 
 <meta name="description" content="Aarya is a decentralized payment system designed to provide secure, fast, and low-cost transactions.  Experience the future of payments with Aarya.">
     
