--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </div>
             <div class="content">
               <div class="info-logo">
-                <img src="images/logo.png" alt="Aarya Logo">
+                <img src="images/logo.webp" alt="Aarya Logo">
               </div>
               <div class="text-content">
                 <h2>What is Aarya?</h2>
