--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <meta name="description" content="Aarya is a decentralized payment system designed to provide secure, fast, and low-cost transactions.  Experience the future of payments with Aarya.">
     
-    <title>Aarya</title>
+    <title>Aarya (ARY)</title>
     <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
